crates/cli/tests/snapshots/activate_test__activate__can_disable_init-12.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
def proto_activate(olddir=None, newdir=None, **kwargs):
    output = $(proto activate xonsh --export)
    if output:
        execx(output)

# execx() does not evaluate into the shell namespace, so the function is
# exported for the session, and for the registration, to be able to reach it
__xonsh__.ctx['proto_activate'] = proto_activate
def proto_deactivate(olddir=None, newdir=None, **kwargs):
    output = $(proto deactivate xonsh --export)
    if output:
        execx(output)

# execx() does not evaluate into the shell namespace, so the function is
# exported for the session, and for the registration, to be able to reach it
__xonsh__.ctx['proto_deactivate'] = proto_deactivate
# The function may have been defined by a separate `execx()`, whose namespace
# is not the shell's, so it is taken from where the definition exported it
if not any(getattr(handler, '__name__', '') == 'proto_activate' for handler in events.on_chdir):
    events.on_chdir(__xonsh__.ctx['proto_activate'])

if not any(getattr(handler, '__name__', '') == 'proto_activate' for handler in events.on_pre_prompt):
    events.on_pre_prompt(__xonsh__.ctx['proto_activate'])
