crates/cli/tests/snapshots/activate_test__activate__can_disable_init.snap
---
source: crates/cli/tests/activate_test.rs
expression: "get_activate_output(&assert, &sandbox)"
---
proto_activate() {
  proto_activate_output=$(proto activate ash --export)
  if [ -n "$proto_activate_output" ]; then
    eval "$proto_activate_output"
  fi
  unset proto_activate_output
}
proto_deactivate() {
  proto_deactivate_output=$(proto deactivate ash --export)
  if [ -n "$proto_deactivate_output" ]; then
    eval "$proto_deactivate_output"
  fi
  unset proto_deactivate_output
}
# POSIX shells have no change-dir or prompt hook, so `cd` is shadowed. This
# clobbers any other `cd` wrapper, as there is no way to chain functions
cd() {
  command cd "$@" || return $?
  proto_activate
  return 0
}
